--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@ body {
     /* background: #d8d8d8 */
     background: url("https://cdn.wallpaper.com/main/styles/fp_1540x944/s3/galleries/15/11/t3taoyuanairport_4.jpg");
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1 {
