--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,13 +25,13 @@ h1 {
 
 .card{
     background: white;
-    border: 2px solid #54637a;
+    border: 2px solid #2765B0;
     margin-bottom: 20px;
     /* padding: 0px 10px 0px 10px; */
 }
 
 .card-header {
-    background: #54637a;
+    background: #2765B0;
     color: white;
     padding: 5px 0px 5px 5px;
     margin: 0px;
